--- a/src/container/Profile/Profile.scss
+++ b/src/container/Profile/Profile.scss
@@ -71,15 +71,14 @@
         // border: 1px solid black;
     }
     .app__profile-text {
-        // width: 70%;
-        height: 40%;
+        width: 100%;
     }
 
     .app__profile-data {
 
         flex-direction: row;
         width: 70%;
-        height: 40%;
+        // height: 40%;
 
         .simple-text {
             text-align: center;
