--- a/src/container/Profile/Profile.scss
+++ b/src/container/Profile/Profile.scss
@@ -111,12 +111,12 @@
                 flex-direction: column;
           
                 text-transform: uppercase;
-                font-weight: 500;
+                font-weight: 700;
           
-                transition: all 0.3s ease-in-out;
+                transition: all 0.15s ease-in-out;
           
                 &:hover {
-                  box-shadow: 0 0 25px #fef4f5;
+                  text-shadow: 0px 2px 10px #fef4f5;
                 }
               }
             
